--- a/Css/sass.scss
+++ b/Css/sass.scss
@@ -34,7 +34,8 @@ h1{
     height: fit-content;
     padding:2% 5% 2% 5%;
 
-    div{
+    button{
+        align-items: center;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         border-radius: .7rem;
         font-size: 1.3rem;
@@ -43,6 +44,9 @@ h1{
         display: flex;
         flex-direction: column;
         overflow-y: hidden;
+        overflow-x: hidden;
+        border: none;
+        background-color: white;
         flex: 0 0 calc(4rem + 5vw);
         height: calc(4rem + 5vw);
     }
