--- a/Css/sass.scss
+++ b/Css/sass.scss
@@ -49,5 +49,6 @@ h1{
         background-color: white;
         flex: 0 0 calc(4rem + 5vw);
         height: calc(4rem + 5vw);
+        transition: 0.2s;
     }
 }
